After Switching to ArrayList<File>